# aocstat

./: .todo  README.md  pyproject.toml
aocstat/: api.py  config.py  format.py  main.py  parse.py
tests/: test_api.py  test_config.py  test_format.py
tests/test_data/: glob_lb_2024_1_1.pkl  puzzle_2024_1_1.pkl
