[tool.poetry]
name = "aocstat"
version = "0.1.0"
description = "Command line tool for interacting with Advent of Code."
authors = ["Hector Brown <hectorjbrown@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
