[project]
name = "aocstat"
version = "1.0.1"
description = "Command line tool for interacting with Advent of Code."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "selenium>=4.7.2",
  "requests>=2.28.1",
  "bs4>=0.0.1",
  "appdirs>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
aocstat = "aocstat.main:start"
