[project]
name = "aocstat"
version = "1.4.1"
description = "Command line tool for interacting with Advent of Code."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "selenium>=4.7.2",
  "requests>=2.28.1",
  "beautifulsoup4>=4.13.0",
  "appdirs>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
aocstat = "aocstat.main:start"

[dependency-groups]
dev = ["pytest"]
